# 2021-spring-polytech-cpp

./: README.md
04_lab/: main.cpp
05_lab/: main.cpp
09_lab/: main.cpp
10_lab/: main.cpp
11_lab/: main.cpp
15_lab/: main.cpp
16_lab/: main.cpp
18_lab/: main.cpp
21_lab/: CMakeLists.txt
21_lab/src/: functions.cpp  functions.h
21_lab/tests/: test.cpp  test_functions.cpp
22_lab/src/: functions.cpp  functions.h
22_lab/tests/: test.cpp
23_lab/: main.cpp
24_lab/: CMakeLists.txt
24_lab/src/: binary_search.cpp  binary_search.h  functions.cpp
24_lab/tests/: test_binary_search.cpp
25_lab/src/: linked_list.cpp
25_lab/tests/: test_linked_list.cpp
27_lab/: CMakeLists.txt
27_lab/src/: smart_pointer.cpp  smart_pointer.h
27_lab/tests/: test.cpp
working_off/1_AverageArray/: CMakeLists.txt
working_off/1_AverageArray/src/: functions.cpp  functions.h
working_off/1_AverageArray/tests/: test.cpp
working_off/2_StringLength/: CMakeLists.txt
working_off/2_StringLength/src/: functions.cpp  functions.h
working_off/2_StringLength/tests/: test.cpp
